finished crud for Customer, Supplier, Product and Transaction.

--- a/TransactionManagement.MVC.Data/TransactionManagement.MVC.Data.csproj
+++ b/TransactionManagement.MVC.Data/TransactionManagement.MVC.Data.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\202009282312524_spelling fix.Designer.cs">
       <DependentUpon>202009282312524_spelling fix.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009291453529_build create for trans and supp.cs" />
+    <Compile Include="Migrations\202009291453529_build create for trans and supp.Designer.cs">
+      <DependentUpon>202009291453529_build create for trans and supp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -99,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202009282312524_spelling fix.resx">
       <DependentUpon>202009282312524_spelling fix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009291453529_build create for trans and supp.resx">
+      <DependentUpon>202009291453529_build create for trans and supp.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
