carousel and payment

--- a/TransactionManagement.MVC/TransactionManagement.MVC.csproj
+++ b/TransactionManagement.MVC/TransactionManagement.MVC.csproj
@@ -215,6 +215,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Content\Assets\BusinessApp.jpg" />
+    <Content Include="Content\Assets\Customers.png" />
+    <Content Include="Content\Assets\LifeSeneca.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
