--- a/TransactionManagement.MVC.Data/TransactionManagement.MVC.Data.csproj
+++ b/TransactionManagement.MVC.Data/TransactionManagement.MVC.Data.csproj
@@ -68,6 +68,11 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202010091324054_fk on product of supp.cs" />
+    <Compile Include="Migrations\202010091324054_fk on product of supp.Designer.cs">
+      <DependentUpon>202010091324054_fk on product of supp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Supplier.cs" />
@@ -76,6 +81,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202010091324054_fk on product of supp.resx">
+      <DependentUpon>202010091324054_fk on product of supp.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
